# songwalker-vsti

./: .gitignore  COMMIT_HISTORY.md  Cargo.toml  README.md  build.rs  run-standalone.sh
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: piano_keyboard_plan.md  piano_visualizer_implementation_plan.md  plan.md  tdd_implementation_plan.md
src/: audio.rs  lib.rs  main.rs  midi.rs  params.rs  plugin.rs  state.rs  transport.rs  x11_setup.rs
src/editor/: browser.rs  code_editor.rs  mod.rs  piano.rs  slot_rack.rs  theme.css  visualizer.rs
src/editor_vizia/: browser.rs  mod.rs  resize_handle.rs  slot_rack.rs
src/perf/: mod.rs  pool.rs  simd.rs
src/preset/: cache.rs  loader.rs  manager.rs  mod.rs
src/slots/: mod.rs  preset_slot.rs  runner_slot.rs  slot.rs
src/standalone/: app.rs  audio_backend.rs  midi_backend.rs  mod.rs  params.rs
