[workspace]
members = ["xtask"]

[package]
name = "songwalker_vsti"
version = "0.1.0"
edition = "2024"
authors = ["SongWalker Contributors"]
license = "GPL-3.0-or-later"
description = "SongWalker VSTi — Multi-timbral instrument plugin with remote preset loading and .sw track runner"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "songwalker-standalone"
path = "src/main.rs"

[dependencies]
songwalker_core = { path = "../songwalker-core", default-features = false }

# Plugin framework
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async networking + runtime
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt", "net", "fs", "sync", "macros"] }

# Audio decoding
minimp3 = "0.5"
hound = "3.5"
base64 = "0.22"

# Caching
directories = "6"
sha2 = "0.10"

# GUI
egui = "0.31"
egui_extras = "0.31"

# Utilities
crossbeam-channel = "0.5"
parking_lot = "0.12"
log = "0.4"

[profile.release]
lto = "thin"
strip = true
opt-level = 3

[profile.release-pgo]
inherits = "release"
lto = "fat"
codegen-units = 1
