[workspace]
members = ["xtask"]

[package]
name = "songwalker_vsti"
version = "0.2.1"
edition = "2024"
authors = ["SongWalker Contributors"]
license = "GPL-3.0-or-later"
description = "SongWalker VSTi — Multi-timbral instrument plugin with remote preset loading and .sw track runner"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "songwalker-standalone"
path = "src/main.rs"

[dependencies]
songwalker_core = { path = "../songwalker-core", default-features = false, features = ["catalog"] }

# Plugin framework
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
egui = "0.31"
egui_extras = "0.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async networking + runtime
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt", "net", "fs", "sync", "macros"] }

# Standalone audio/MIDI/window (custom standalone replaces nih-plug's)
cpal = "0.15"
midir = "0.10"
eframe = "0.31"

# Audio decoding
minimp3 = "0.5"
hound = "3.5"
base64 = "0.22"

# Caching
directories = "6"
sha2 = "0.10"

# Icon loading (PNG decode for X11 window icon)
image = { version = "0.25", default-features = false, features = ["png"] }

# Utilities
crossbeam-channel = "0.5"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", default-features = false, features = ["allow-unsafe-code"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
lto = "thin"
strip = true
opt-level = 3

[profile.release-pgo]
inherits = "release"
lto = "fat"
codegen-units = 1

[patch.'https://github.com/robbert-vdh/nih-plug.git']
nih_plug = { path = "../nih-plug" }
nih_plug_egui = { path = "../nih-plug/nih_plug_egui" }
